# chopsuey

./: .gitignore  Cargo.toml  README.md
chopsuey/: README.md  pubspec.yaml
chopsuey/android/app/: build.gradle
chopsuey/android/app/src/main/: AndroidManifest.xml
chopsuey/android/app/src/main/kotlin/com/example/chopsuey/: MainActivity.kt
chopsuey/ios/Runner/: Info.plist
chopsuey/ios/Runner.xcodeproj/: project.pbxproj
chopsuey/lib/: app.dart  main.dart
chopsuey/lib/bloc/: home.dart
chopsuey/lib/pages/: home.dart
chopsuey/lib/services/proto/: chopsuey.pb.dart  chopsuey.pbenum.dart  chopsuey.pbgrpc.dart  chopsuey.pbjson.dart
chopsuey/linux/: CMakeLists.txt  my_application.cc
chopsuey/macos/Runner.xcodeproj/: project.pbxproj
chopsuey/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
chopsuey/macos/Runner/Configs/: AppInfo.xcconfig
chopsuey/web/: index.html  manifest.json
chopsuey/windows/: CMakeLists.txt
chopsuey/windows/runner/: Runner.rc  main.cpp
chopsueycli/: Cargo.toml  build.rs
chopsueycli/src/: main.rs
chopsueyd/: Cargo.toml
chopsueyd/src/: config.rs  machine.rs  main.rs  server.rs  wol.rs
proto/: chopsuey.proto
