[package]
name = "chopsueycli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37", features = ["macros", "net", "rt", "rt-multi-thread"]}
snafu = "0.8.2"
tonic = "0.11"
prost = "0.12"
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"