[package]
name = "chopsueyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37", features = ["macros", "net", "rt", "rt-multi-thread"]}
snafu = "0.8.2"
bytes = "1.6.0"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_yaml = "0.9.34"
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"