[package]
name = "chopsueyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.8.2"
log = "0.4.21"
env_logger = "0.11.3"
serde = {version = "1.0.201", features = ["derive"]}
serde_yaml = "0.9.34"

tokio = {version = "1.37", features = ["macros", "net", "rt", "rt-multi-thread"]}
bytes = "1.6.0"
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"